syntax = "proto3";
package message;

option go_package = "gihub.com/guillembonet/grpc-test/message";

service Messenger {
  rpc ProcessMessage(Message) returns (MessageResponse);
  rpc GetProcessedMessages(GetProcessedMessagesParams)
      returns (stream ProcessedMessage);
}

message Message {
  string message = 1;
  string note = 2;
}

message MessageResponse { Status status = 1; }

enum Status {
  OK = 0;
  ERROR = 1;
}

message ProcessedMessage {
  string message = 1;
  string note = 2;
  string base64_message = 3;
}

message GetProcessedMessagesParams {}
